# ssparadise

./: .gitignore  .replit  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-admin-dashboard-1731100052307.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-admin-dashboard-1731176316903.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-cancel-booking--1731184727653.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-room-detail-wi-1731099828271.txt  Pasted-Create-a-dynamic-booking-system-for-SS-Paradise-Residency-s-website-that-includes-the-following-feat-1731274505611.txt  Pasted-InternalError-sqlalchemy-exc-InternalError-psycopg2-errors-InFailedSqlTransaction-current-transac-1731302071969.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedTable-relation-rooms--1731302355647.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-models-Booking-object-has-no-attribute-timestamp-1731174581373.txt  app.py  auth_routes.py  create_admin.py  email_utils.py  init_db.py  main.py  models.py  oauth_config.py  oauth_routes.py  payment.py  pyproject.toml  requirements.txt  routes.py  seed.sql  seed_rooms.py  setup_admin.py  setup_database.py
instance/: ss_paradise.db
static/css/: style.css
static/js/: booking.js  main.js
templates/: base.html  booking.html  contact.html  index.html  my_bookings.html  payment.html  privacy.html  room_detail.html  rooms.html  terms.html
(+6 files in other folders)
